# api_test_framework

./: .gitignore  Jenkinsfile  conftest.py  main.py  pyproject.toml  pytest.ini
apis/: base_api.py  cart_api.py  login_api.py  user_api.py
common/: assertion.py  base_path.py  file_handler.py  read_config.py  variable_handler.py
config/: config.yaml  settings.py
data/cart/: cart_cases.yaml
data/flow/: buy_flow.yaml
data/user/: login_cases.yaml
schemas/cart/: add_cart.json
schemas/user/: login_response_success.json
test_cases/: conftest.py  test_buy_flow.py  test_cart_add.py  test_login.py  test_smoke.py  test_user_login.py  test_user_login_async.py
